# kata

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  apm.lock.yaml  apm.yml
.github/workflows/: ci.yml  release.yml
.kata/: applied.toml  vars.toml
src/: applied.rs  cli.rs  error.rs  git.rs  interactive.rs  lib.rs  main.rs  manifest.rs  paths.rs  preset.rs  updater.rs  vcs.rs
src/ai/: agent.rs  mod.rs  process.rs
src/cmd/: add.rs  apply.rs  doctor.rs  init.rs  list.rs  mod.rs  register.rs  remove.rs  self_update.rs  status.rs  unregister.rs  update.rs
src/config/: mod.rs
src/modes/: ai.rs  merge_json.rs  merge_path.rs  merge_section.rs  merge_toml.rs  merge_yaml.rs  mod.rs  overwrite.rs  script.rs
src/render/: context.rs  mod.rs  vars.rs
src/runner/: mod.rs
src/template/: cache.rs  mod.rs  source.rs
src/ui/: diff.rs  mod.rs
tests/: add_remove_update.rs  ai_mode.rs  apply_basic.rs  git_preset.rs  git_source.rs  merge_section.rs  script_mode.rs
