[package]
name = "kata"
version = "0.12.0"
edition = "2024"
rust-version = "1.85"
description = "Multi-project template applier with AI-delegated merge"
license = "MIT"
repository = "https://github.com/yukimemi/kata"
homepage = "https://github.com/yukimemi/kata"
readme = "README.md"
keywords = ["template", "scaffold", "ai", "tera", "monorepo"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "kata"
path = "src/main.rs"

[lib]
name = "kata"
path = "src/lib.rs"

[dependencies]
# Async runtime + concurrency
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "process", "fs", "sync", "io-util", "time"] }
async-trait = "0.1.89"

# Self-update (background auto-update + `kata self-update`)
kaishin = "0.6.3"

# CLI
clap = { version = "4.6.2", features = ["derive", "env"] }
clap_complete = "4.6.7"

# Templating + vars (mandatory; do not reimplement)
teravars = { version = "0.1.6", features = ["merge", "shell", "tracing"] }
tera = "1.20.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
# `preserve_order` keeps insertion order across deserialize → mutate →
# serialize, so merge-json (#71) leaf-replacements don't shuffle
# the consumer's interleaved keys. Pulls in indexmap transitively.
serde_json = { version = "1.0.150", features = ["preserve_order"] }
toml = "1.1.3"
toml_edit = "0.25.13"

# Errors
thiserror = "2.0.18"
anyhow = "1.0.103"

# Filesystem / paths
camino = { version = "1.2.4", features = ["serde1"] }
directories = "6.0.0"

# Time
jiff = { version = "0.2.32", features = ["serde"] }

# UI
inquire = "0.9.4"
indicatif = "0.18.6"
similar = "3.1.1"
owo-colors = "4.3.0"

# Hashing / glob / regex
sha2 = "0.11"
globset = "0.4.19"
# Used by merge-toml / merge-yaml `paths` entries written in rvpm
# `//.../` regex form; see #62.
regex = "1.13.1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# PATH resolution for AI CLI subprocesses (claude / gemini / codex …).
# Used by `ai::process::resolve_cli` to find the agent binary on
# Windows (PATHEXT + .ps1 fallback) the same way rvpm does.
which = "8.0.5"

# Secure tmp file allocation for the AI handoff prompt — must live
# in [dependencies] (not just [dev-dependencies]) because
# `ai::process::run_handoff` writes the prompt file at runtime.
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.4"
predicates = "3.1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
